# Bomberman

./: CMakeLists.txt  README.md  build.sh  diff
res/config/: gameField.txt
res/shaders/: simpleShader.frag  simpleShader.vert
src/: CMakeLists.txt  config.hpp  game.cpp  game.hpp  main.cpp
src/core/: actionField.cpp  actionField.hpp
src/engine/: fileReader.cpp  fileReader.hpp  logger.hpp  render.cpp  render.hpp  shaderProgram.cpp  shaderProgram.hpp
src/glad/: glad.c  glad.h
src/math/: setOperations.hpp
